@@ -81,6 +81,9 @@ Core and Builtins
 Library
 -------
 
+- Issue #24982: shutil.make_archive() with the "zip" format now adds entries
+  for directories (including empty directories) in ZIP file.
+
 - Issue #25019: Fixed a crash caused by setting non-string key of expat parser.
   Based on patch by John Leitch.
 
